--- a/src/index.css
+++ b/src/index.css
@@ -15,41 +15,43 @@ section{
   }
   section .air{
     position: absolute;
-    bottom: 0;
-    left: 0;
     width: 100%;
     height: 100px;
     background: url(https://1.bp.blogspot.com/-xQUc-TovqDk/XdxogmMqIRI/AAAAAAAACvI/AizpnE509UMGBcTiLJ58BC6iViPYGYQfQCLcBGAsYHQ/s1600/wave.png);
     background-size: 1000px 100px
   }
-  section .air.air1{
+
+  section .air.bottom1{
     animation: wave 30s linear infinite;
     z-index: 1000;
     opacity: 1;
     animation-delay: 0s;
     bottom: 0;
   }
-  section .air.air2{
+  section .air.bottom2{
     animation: wave2 15s linear infinite;
     z-index: 999;
     opacity: 0.5;
     animation-delay: -5s;
     bottom: 10px;
   }
-  section .air.air3{
+  section .air.top1{
+    transform: rotate(180deg);
     animation: wave 30s linear infinite;
-    z-index: 998;
-    opacity: 0.2;
-    animation-delay: -2s;
-    bottom: 15px;
+    z-index: 1000;
+    opacity: 1;
+    animation-delay: 0s;
+    top: 0;
   }
-  section .air.air4{
-    animation: wave2 5s linear infinite;
-    z-index: 997;
-    opacity: 0.7;
+  section .air.top2{
+    transform: rotate(180deg);
+    animation: wave2 15s linear infinite;
+    z-index: 999;
+    opacity: 0.5;
     animation-delay: -5s;
-    bottom: 20px;
+    top: 10px;
   }
+
   @keyframes wave{
     0%{
       background-position-x: 0px; 
